fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-overflow:auto
+
 
 .main {
-	overflow: hidden;
+	overflow: auto;
 	width: 100%;
 	height: auto;
 	background-color: black;
